--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
+    "react-i18next": "^12.0.0",
     "react-icons": "^4.3.1",
     "react-multi-email": "^0.5.3",
     "react-redux": "^7.2.6",
